name:                ap-reflect
version:             0.1.0.0
synopsis:            Partial evaluation reflection a la simple-reflect.
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Oleg Baev
maintainer:          odbaev@yandex.ru
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Debug.Reflect
  -- other-modules:       
  build-depends:       base ==4.6.*
